name:                hello-uuagc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hello-uuagc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Custom
cabal-version:       1.12
extra-source-files:  README.md, src/Sem.ag, uuagc_options

executable hello-uuagc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Sem
  build-depends:       base >= 4.7 && < 5,
                       uuagc,
                       uuagc-cabal
